@@ -1,15 +1,21 @@
-val scala3Version = "3.7.1"
+ThisBuild / version := "0.1.0-SNAPSHOT"
+ThisBuild / scalaVersion := "2.13.16"
 
-lazy val root = project
-  .in(file("."))
+lazy val root = (project in file("."))
   .settings(
-    name := "VRP",
-    version := "0.1.0-SNAPSHOT",
-    scalaVersion := scala3Version,
+      name := "VRP",
 
-    libraryDependencies ++= Seq(
-      "org.scalameta" %% "munit" % "1.0.0" % "test",
-      "org.junit.jupiter" % "junit-jupiter-api" % "5.11.0" % "test",
-      "org.junit.jupiter" % "junit-jupiter-engine" % "5.11.0" % "test"
-    )
+      // Enable preview features for Java compilation
+      javacOptions ++= Seq("--enable-preview", "--release", "21"),
+
+      // Enable preview features for Scala (release target)
+      scalacOptions ++= Seq("--release", "21"),
+
+      // Enable preview features at runtime
+      fork := true,
+      javaOptions += "--enable-preview",
+
+      // Enable preview features during tests
+      Test / fork := true,
+      Test / javaOptions += "--enable-preview"
   )
